<resources>
    <string name="app_name">Commercial Needs Manager</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="prompt_remember_me">Remember me</string>
    <string name="prompt_email_gfi">"@gfi.fr"</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="fiche_besoin_date">Date: 01/01/2000</string>
    <string name="fiche_besoin_raison_social">Client</string>
    <string name="fiche_besoin_nom_client">Contact name</string>
    <string name="fiche_besoin_titre">Title</string>
    <string name="fiche_besoin_commercial_name">Commercial Name</string>
    <string name="fiche_besoin_description">Full description</string>
    <string name="fiche_besoin_key1">Success Factor 1</string>
    <string name="fiche_besoin_key2">Success Factor 2</string>
    <string name="fiche_besoin_key3">Success Factor 3</string>
    <string name="fiche_besoin_duration">Duration (months)</string>
    <string name="fiche_besoin_day">Days/week</string>
    <string name="fiche_besoin_location">Location</string>
    <string name="fiche_besoin_rate">Rate (€ excl. taxes)</string>
    <string name="fiche_besoin_browse">Browse...</string>
    <string name="fiche_besoin_status">Status : </string>
    <string name="fiche_besoin_upload">UPLOAD</string>
    <string name="fiche_besoin_saves_hare">SAVE &amp; SHARE</string>
    <string name="fiche_besoin_cancel">CANCEL</string>
    <string name="fiche_besoin_consultant1">Consultant n°1</string>
    <string name="fiche_besoin_consultant2">Consultant n°2</string>
    <string name="fiche_besoin_consultant3">Consultant n°3</string>
    <string name="fiche_besoin_consultant4">Consultant n°4</string>
    <string name="fiche_besoin_consultant5">Consultant n°5</string>
    <string name="fiche_besoin_liste_consultants">Liste Constultants : </string>
    <string name="add">add</string>
    <string-array name="tri">
        <item>Open</item>
        <item>Won</item>
        <item>Lost</item>
    </string-array>
</resources>
