<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/textViewNomCommercial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:includeFontPadding="false"
                android:text="@string/fiche_besoin_commercial_name"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:text="@string/fiche_besoin_date"
                android:textSize="19sp" />

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextViewRaisonSocial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:hint="@string/fiche_besoin_raison_social" />

            <EditText
                android:id="@+id/editTextContactName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:ems="10"
                android:hint="@string/fiche_besoin_nom_client"
                android:inputType="textUri|textPersonName" />

            <EditText
                android:id="@+id/editTextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:ems="10"
                android:hint="@string/fiche_besoin_titre"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextFullDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:ems="10"
                android:hint="@string/fiche_besoin_description"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/editTextKey1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:ems="10"
                android:hint="@string/fiche_besoin_key1"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/editTextKey2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:ems="10"
                android:hint="@string/fiche_besoin_key2"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/editTextKey3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:ems="10"
                android:hint="@string/fiche_besoin_key3"
                android:inputType="textMultiLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextDuration"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/fiche_besoin_duration"
                    android:inputType="number"
                    android:textSize="17sp" />

                <EditText
                    android:id="@+id/editTextDays"
                    android:layout_width="118dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/fiche_besoin_day"
                    android:inputType="number"
                    android:textSize="17sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:text="Start at the latest : "
                android:textSize="21sp" />

            <DatePicker
                android:id="@+id/datePickerStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:headerBackground="@android:color/holo_green_dark"
                android:yearListSelectorColor="@android:color/holo_green_dark" />

            <EditText
                android:id="@+id/editTextLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:ems="10"
                android:hint="@string/fiche_besoin_location"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/editTextRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:ems="10"
                android:hint="@string/fiche_besoin_rate"
                android:inputType="numberDecimal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="14dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginStart="14dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewStatus"
                    android:layout_width="89dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:text="@string/fiche_besoin_status" />

                <Spinner
                    android:id="@+id/spinnerStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_weight="1" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/relLay"
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <EditText
                    android:id="@+id/editTextConsultant1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/fiche_besoin_consultant1"
                    android:inputType="textMultiLine" />

                <EditText
                    android:id="@+id/editTextConsultant2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/fiche_besoin_consultant2"
                    android:inputType="textMultiLine"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/editTextConsultant3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/fiche_besoin_consultant3"
                    android:inputType="textMultiLine"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/editTextConsultant4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/fiche_besoin_consultant4"
                    android:inputType="textMultiLine"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/editTextConsultant5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:ems="10"
                    android:hint="@string/fiche_besoin_consultant5"
                    android:inputType="textMultiLine"
                    android:visibility="invisible" />

                <LinearLayout
                    android:id="@+id/linearRel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:orientation="horizontal"
                    android:translationY="55dp">

                    <Button
                        android:id="@+id/buttonSaveShare"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:layout_weight="1"
                        android:text="@string/fiche_besoin_saves_hare" />

                    <Button
                        android:id="@+id/buttonCancel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:layout_weight="1"
                        android:text="@string/fiche_besoin_cancel" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>